--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
   <!-- Add Bootstrap for better styling -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <style>
       body { font-family: Arial, sans-serif; margin: 20px; }
@@ -28,6 +29,13 @@
 </head>
 <body>
 <div class="container-fluid">
+  <!-- Add Tutorial Button -->
+  <div class="text-end mb-3">
+    <a href="https://github.com/ColinVaughn/CSV-Tower-Viewer/tree/main" target="_blank" class="btn btn-info">
+      <i class="bi bi-github"></i> Tutorial & Source Code
+    </a>
+  </div>
+
   <!-- Main Tabs -->
   <ul class="nav nav-tabs" id="mainTabs" role="tablist">
     <li class="nav-item" role="presentation">
